<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultActivity"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="top|center"
    >
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/trophy"
        android:contentDescription="@string/trophy_image"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_congratulations"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"

        />

    <TextView
        android:id="@+id/playerResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score_is_9_out_of_10"
        android:textColor="@color/opaque_white"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:background="@drawable/white_bg"
        />





</LinearLayout>